[tool.poetry]
name = "gocker"
version = "0.1.0"
description = ""
authors = ["Olivier MICHAUD <olivier@micoli.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ansi = "^0.3.6"
colored-traceback = "^0.3.0"
daemon = "^1.2"
dependency-injector = "^4.41.0"
docker = "^6.0.1"
event-bus = "^1.0.2"
expiringdict = "^1.2.2"
parsedatetime = "^2.6"
python-daemon = "^2.3.2"
pygments = "^2.13.0"
pyyaml = "^6.0"
requests = "^2.28.1"
supervisor = "^4.2.5"
tabulate = "^0.9.0"
urwid = "^2.1.2"
urwidtrees = "^1.0.3"

[tool.poetry.group.test.dependencies]
pytest = "^5.2"
pylint = "^2.15.9"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gocker = 'gocker.__main__:main'
